[gd_scene load_steps=43 format=2]

[ext_resource path="res://scripts/castle_01.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/cave_bg_05.png" type="Texture" id=2]
[ext_resource path="res://sprites/backgrounds/cave_bg_06.png" type="Texture" id=3]
[ext_resource path="res://sounds/fantasy_armies.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/button_click.wav" type="AudioStream" id=5]
[ext_resource path="res://sprites/backgrounds/cave_bg_01.png" type="Texture" id=6]
[ext_resource path="res://sprites/skill_04_icon.png" type="Texture" id=7]
[ext_resource path="res://sprites/mist.png" type="Texture" id=8]
[ext_resource path="res://sprites/tilesets.png" type="Texture" id=9]
[ext_resource path="res://sounds/tutorial_pop.wav" type="AudioStream" id=10]
[ext_resource path="res://sprites/backgrounds/cave_bg_02.png" type="Texture" id=11]
[ext_resource path="res://sprites/backgrounds/cave_bg_03.png" type="Texture" id=12]
[ext_resource path="res://sprites/backgrounds/cave_bg_04.png" type="Texture" id=13]
[ext_resource path="res://entities/treasure_end.tscn" type="PackedScene" id=14]
[ext_resource path="res://entities/retry_btn.tscn" type="PackedScene" id=15]
[ext_resource path="res://entities/goblin.tscn" type="PackedScene" id=16]
[ext_resource path="res://fonts/futile_font.tres" type="DynamicFont" id=17]
[ext_resource path="res://entities/now_playing.tscn" type="PackedScene" id=18]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=19]
[ext_resource path="res://entities/slime_green.tscn" type="PackedScene" id=21]
[ext_resource path="res://entities/slime_blue.tscn" type="PackedScene" id=22]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 4, 16, 4, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 16, 16, 0, 16, 0, 4, 16, 4 )

[sub_resource type="TileSet" id=13]
0/name = "tilesets.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilesets.png 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tilesets.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tilesets.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 6 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tilesets.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 16, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 7 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tilesets.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 16, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 8 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tilesets.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 32, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 9 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tilesets.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 16, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 10 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "tilesets.png 8"
8/texture = ExtResource( 9 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 32, 32, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 11 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "tilesets.png 9"
9/texture = ExtResource( 9 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 48, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 12 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "tilesets.png 10"
10/texture = ExtResource( 9 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 16, 48, 16, 16 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 3 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "tilesets.png 11"
11/texture = ExtResource( 9 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 32, 48, 16, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 4 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "tilesets.png 12"
12/texture = ExtResource( 9 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 64, 16, 16 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "tilesets.png 13"
13/texture = ExtResource( 9 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 16, 64, 16, 16 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "tilesets.png 14"
14/texture = ExtResource( 9 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 32, 64, 16, 16 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[sub_resource type="Animation" id=15]
resource_name = "fade"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("characters/player/label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.72549, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.584314, 0.584314, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.309804, 0.309804, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.101961, 0.109804, 0.172549, 1 )

[sub_resource type="InputEventAction" id=20]
action = "shortcut"
pressed = true

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[node name="castle_01" type="Node2D"]
script = ExtResource( 1 )

[node name="parallax_background" type="ParallaxBackground" parent="."]

[node name="sprite" type="Sprite" parent="parallax_background"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
centered = false

[node name="parallax_layer5" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer5"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
centered = false

[node name="parallax_layer4" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer4"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
centered = false

[node name="parallax_layer3" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer3"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )
centered = false

[node name="parallax_layer2" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer2"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 11 )
centered = false

[node name="parallax_layer" type="ParallaxLayer" parent="parallax_background"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 320, 0 )

[node name="sprite" type="Sprite" parent="parallax_background/parallax_layer"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
centered = false

[node name="mist" type="Sprite" parent="parallax_background"]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
centered = false

[node name="bg_music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true

[node name="now_playing" parent="bg_music" instance=ExtResource( 18 )]

[node name="tile_map" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 13 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 589824, 10, 0, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 0, 589829, 10, 0, 589830, 10, 0, 589831, 10, 0, 589832, 10, 0, 589833, 10, 0, 589834, 10, 0, 589835, 10, 0, 589836, 10, 0, 589837, 10, 0, 589838, 10, 0, 589839, 10, 0, 589840, 10, 0, 589841, 10, 0, 589842, 10, 0, 589843, 10, 0, 589844, 10, 0, 589845, 10, 0, 589846, 10, 0, 589847, 10, 0, 589848, 10, 0, 589849, 10, 0, 589850, 10, 0, 589851, 10, 0, 589852, 10, 0, 589853, 10, 0, 589854, 10, 0, 589855, 10, 0, 589856, 10, 0, 589857, 10, 0, 589858, 10, 0, 589859, 10, 0, 589860, 10, 0, 589861, 10, 0, 589862, 10, 0, 589863, 10, 0, 589864, 10, 0, 589865, 10, 0, 589866, 10, 0, 589867, 10, 0, 589868, 10, 0, 589869, 10, 0, 589870, 10, 0, 589871, 10, 0, 589872, 10, 0, 589873, 10, 0, 589874, 10, 0, 589875, 10, 0, 589876, 10, 0, 589877, 10, 0, 589878, 10, 0, 589879, 10, 0, 589880, 10, 0, 589881, 10, 0, 589882, 10, 0, 589883, 10, 0, 589884, 10, 0, 589885, 10, 0, 589886, 10, 0, 589887, 10, 0, 589888, 10, 0, 589889, 10, 0, 589890, 10, 0, 589891, 10, 0, 589892, 10, 0, 589893, 10, 0, 589894, 10, 0, 589895, 10, 0, 589896, 10, 0, 589897, 10, 0, 589898, 10, 0, 589899, 10, 0, 589900, 10, 0, 655360, 13, 0, 655361, 13, 0, 655362, 13, 0, 655363, 13, 0, 655364, 13, 0, 655365, 13, 0, 655366, 13, 0, 655367, 13, 0, 655368, 13, 0, 655369, 13, 0, 655370, 13, 0, 655371, 13, 0, 655372, 13, 0, 655373, 13, 0, 655374, 13, 0, 655375, 13, 0, 655376, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 13, 0, 655389, 13, 0, 655390, 13, 0, 655391, 13, 0, 655392, 13, 0, 655393, 13, 0, 655394, 13, 0, 655395, 13, 0, 655396, 13, 0, 655397, 13, 0, 655398, 13, 0, 655399, 13, 0, 655400, 13, 0, 655401, 13, 0, 655402, 13, 0, 655403, 13, 0, 655404, 13, 0, 655405, 13, 0, 655406, 13, 0, 655407, 13, 0, 655408, 13, 0, 655409, 13, 0, 655410, 13, 0, 655411, 13, 0, 655412, 13, 0, 655413, 13, 0, 655414, 13, 0, 655415, 13, 0, 655416, 13, 0, 655417, 13, 0, 655418, 13, 0, 655419, 13, 0, 655420, 13, 0, 655421, 13, 0, 655422, 13, 0, 655423, 13, 0, 655424, 13, 0, 655425, 13, 0, 655426, 13, 0, 655427, 13, 0, 655428, 13, 0, 655429, 13, 0, 655430, 13, 0, 655431, 13, 0, 655432, 13, 0, 655433, 13, 0, 655434, 13, 0, 655435, 13, 0, 655436, 13, 0, 720896, 13, 0, 720897, 13, 0, 720898, 13, 0, 720899, 13, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 13, 0, 720905, 13, 0, 720906, 13, 0, 720907, 13, 0, 720908, 13, 0, 720909, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 13, 0, 720923, 13, 0, 720924, 13, 0, 720925, 13, 0, 720926, 13, 0, 720927, 13, 0, 720928, 13, 0, 720929, 13, 0, 720930, 13, 0, 720931, 13, 0, 720932, 13, 0, 720933, 13, 0, 720934, 13, 0, 720935, 13, 0, 720936, 13, 0, 720937, 13, 0, 720938, 13, 0, 720939, 13, 0, 720940, 13, 0, 720941, 13, 0, 720942, 13, 0, 720943, 13, 0, 720944, 13, 0, 720945, 13, 0, 720946, 13, 0, 720947, 13, 0, 720948, 13, 0, 720949, 13, 0, 720950, 13, 0, 720951, 13, 0, 720952, 13, 0, 720953, 13, 0, 720954, 13, 0, 720955, 13, 0, 720956, 13, 0, 720957, 13, 0, 720958, 13, 0, 720959, 13, 0, 720960, 13, 0, 720961, 13, 0, 720962, 13, 0, 720963, 13, 0, 720964, 13, 0, 720965, 13, 0, 720966, 13, 0, 720967, 13, 0, 720968, 13, 0, 720969, 13, 0, 720970, 13, 0, 720971, 13, 0, 720972, 13, 0 )

[node name="characters" type="Node2D" parent="."]

[node name="player" parent="characters" instance=ExtResource( 19 )]
position = Vector2( 65, 140 )

[node name="label" type="Label" parent="characters/player"]
margin_left = -60.0
margin_top = -33.0
margin_right = 160.0
margin_bottom = -19.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.254902, 0.65098, 0.964706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_y = 2
text = "Dude, what happened to you?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemies" type="Node2D" parent="."]

[node name="slime_green" parent="enemies" instance=ExtResource( 21 )]
position = Vector2( 257, 140 )

[node name="slime_green2" parent="enemies" instance=ExtResource( 21 )]
position = Vector2( 409, 140 )

[node name="slime_blue" parent="enemies" instance=ExtResource( 22 )]
position = Vector2( 610, 140 )

[node name="goblin" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 635, 140 )

[node name="goblin2" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 655, 140 )

[node name="goblin3" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 675, 140 )

[node name="goblin4" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 695, 140 )

[node name="goblin5" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 715, 140 )

[node name="goblin6" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 735, 140 )

[node name="goblin7" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 755, 140 )

[node name="goblin8" parent="enemies" instance=ExtResource( 16 )]
position = Vector2( 775, 140 )

[node name="projectiles" type="Node2D" parent="."]

[node name="objects" type="Node2D" parent="."]

[node name="treasure_end" parent="objects" instance=ExtResource( 14 )]
position = Vector2( 944, 140 )

[node name="timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="healer_anim" type="AnimationPlayer" parent="."]
autoplay = "fade"
anims/fade = SubResource( 15 )

[node name="gui" type="CanvasLayer" parent="."]

[node name="blood_stained" type="Panel" parent="gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry_btn" parent="gui" instance=ExtResource( 15 )]
pause_mode = 2
visible = false

[node name="skill_tutorial" type="Panel" parent="gui"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_icon" type="TextureRect" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 8, 16 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -24.0
margin_right = 170.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 170, 72 )
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
text = "Skill Unlocked: Invincibility
Effect: Makes the Hero invincible for 5 secs
Mana Cost: 40 Mana"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skill_btn" type="Button" parent="gui/skill_tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 12.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 28, 120 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.109804, 0.172549, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.109804, 0.172549, 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 21 )
text = "OK!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hint_lbl" type="Label" parent="gui/skill_tutorial/skill_btn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 100, 7 )
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
text = "or click space to continue"

[node name="btn_click" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 5 )
volume_db = 8.0

[node name="tut_pop" type="AudioStreamPlayer" parent="gui"]
stream = ExtResource( 10 )
volume_db = -4.0
pitch_scale = 0.9
[connection signal="pressed" from="gui/retry_btn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="gui/skill_tutorial/skill_btn" to="." method="_on_skill_btn_pressed"]
